kubernetes/misenplace/5_sa-welcome.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: welcome
  labels:
    shared-gateway-access: "true"
