kubernetes/misenplace/2_balloon.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: balloon
  labels:
    shared-gateway-access: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: balloon-deploy
  namespace: balloon
spec:
  replicas: 10
  selector:
    matchLabels:
      app: balloon
  template:
    metadata:
      labels:
        app: balloon
    spec:
      priorityClassName: balloon-priority
      terminationGracePeriodSeconds: 0
      containers:
      - name: busybox
        image: busybox:latest
        command: ["sleep"]
        args: ["infinity"]
        resources:
            requests:
              cpu: 200m
              memory: 250Mi
---
