kubernetes/misenplace/1_gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
  labels:
    shared-gateway-access: "true"
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: welcome-autoscale
  namespace: gateway
spec:
  gatewayClassName: gke-l7-gxlb
  listeners:
  - name: https
    hostname: "cloudday.manasakandula.tech"
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      options:
        networking.gke.io/pre-shared-certs: cloudday-demo-tech
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            shared-gateway-access: "true"
